# warhammer-batlle-simulator

./: .gitignore  CMakeLists.txt  character.cpp  character.h  character_tests.cpp  diceroller.cpp  diceroller.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  simulator.cpp  simulator.h  simulator_tests.cpp  warhammer_battle_simulator.pro  whsim_pl_PL.qm  whsim_pl_PL.ts
